# dangmoca-service

./: .gitattributes  README.md
fastApiProject/: Dockerfile  conda_requirements.yaml  main.py  pyproject.toml  requirements.txt
fastApiProject/kobert_model/: Classifier.py  Dataset.py  predictor.py
fastApiProject/kobert_model/model_pt/: kobert_model_state_dict.pt  kobert_trained_model.pt
