[tool.poetry]
name = "fastApiProject"
version = "0.1.0"
description = "analyze review"
authors = ["A607"]

[tool.poetry.dependencies]
python = "^3.9.5"
gluonnlp = "^0.10.0"
torch = "^1.10.2"
torchaudio = "^0.10.2"
torchvision = "^0.11.3"
tqdm = "^4.63.0"
transformers = "^4.37.2"
anyio = "^3.5.0"
asgiref = "^3.4.1"
async-generator = "^1.10"
Brotli = "^1.0.9"
brotlipy = "^0.7.0"
certifi = "^2024.2.2"
cffi = "^1.16.0"
chardet = "^3.0.4"
charset-normalizer = "^2.0.4"
click = "^8.0.3"
colorama = "^0.4.4"
contextlib2 = "^21.6.0"
cryptography = "^42.0.5"
Cython = "^3.0.9"
fastapi = "^0.70.1"
filelock = "^3.4.0"
fsspec = "^2023.10.0"
gmpy2 = "^2.1.2"
graphviz = "^0.8.4"
h11 = "^0.13.0"
huggingface-hub = "^0.20.3"
idna = "^2.6"
immutables = "^0.16"
importlib-metadata = "^7.0.1"
importlib-resources = "^5.4.0"
Jinja2 = "^3.1.3"
joblib = "^1.0.1"
MarkupSafe = "^2.1.3"
mkl-fft = "^1.3.8"
mkl-random = "^1.2.4"
mkl-service = "^2.4.0"
mpmath = "^1.3.0"
mxnet = "^1.7.0"
networkx = "^3.1"
numpy = "^1.23.1"
packaging = "^21.3"
pandas = "^1.1.5"
Pillow = "^8.4.0"
pydantic = "^1.10.12"
pyOpenSSL = "^24.0.0"
pyparsing = "^3.0.4"
PySocks = "^1.7.1"
python-dateutil = "^2.9.0"
pytz = "^2024.1"
PyYAML = "^6.0.1"
regex = "^2023.10.3"
requests = "^2.18.4"
sacremoses = "^0.0.43"
safetensors = "^0.4.2"
sentencepiece = "^0.2.0"
setuptools = "^59.6.0"
six = "^1.16.0"
sniffio = "^1.3.0"
starlette = "^0.16.0"
sympy = "^1.12"
tokenizers = "^0.15.1"
typing_extensions = "^4.9.0"
urllib3 = "^1.22"
uvicorn = "^0.16.0"
wheel = "^0.37.1"
win-inet-pton = "^1.1.0"
wincertstore = "^0.2"
zipp = "^3.6.0"

[tool.poetry.dev-dependencies]
